Fix spacing on saved project

--- a/src/Components/SavedPage/SavedPage.css
+++ b/src/Components/SavedPage/SavedPage.css
@@ -7,6 +7,7 @@
 
 .saved-page-title {
   text-align: center;
+  font-size: 30px;
   margin-bottom: 30px;
 }
 
