--- a/src/Components/SavedPage/SavedProject/SavedProject.css
+++ b/src/Components/SavedPage/SavedProject/SavedProject.css
@@ -11,8 +11,9 @@
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.25);
 }
 
-.saved-project-title {
+.saved-project-title, .saved-project-description {
   text-align: center;
+  font-size: 20px;
 }
 
 .saved-project-details {
@@ -29,6 +30,7 @@
   padding: 15px 0px;
   border-top: 1px solid #DBD5D5;;
 }
+
 .mini-palette-color {
   border-radius: 50%;
   height: 30px; 
